--- a/app/app/views/comments/_form.html.erb
+++ b/app/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment, :url => url_for(:controller => 'comments', :action => 'create'), method: "post") do |f| %>
+  <%= form_for(@comment, :url => url_for(:controller => 'comments', :action => 'create'), method: "post", remote: true) do |f| %>
 <%= f.hidden_field :recipe_id %>
 <% if user_signed_in? %>
   <%= f.hidden_field :user_id , value: current_user.id %>
@@ -11,7 +11,7 @@
           <%= f.text_area :content, class: "form-control", cols: "30", rows: "10", placeholder: "Your comment..." %>
           </div>
           <div class="col-12">
-            <button class="btn bueno-btn mt-30" type="submit">Submit Comment</button>
+            <button class="btn bueno-btn mt-30" type="submit" >Submit Comment</button>
           </div>
       </div>
       </form> 
