--- a/app/app/views/recipes/show.html.erb
+++ b/app/app/views/recipes/show.html.erb
@@ -16,7 +16,7 @@
             <a href="#" class="post-tag"><%= @recipe.category.name %></a>
             <h4 class="post-title"><%= @recipe.name %></h4>
             <div class="post-meta mb-50">
-              <a href="#" class="post-date disabled"><%= I18n.l(@recipe.created_at) %></a>
+              <a href="#" class="post-date disabled"><%= @recipe.created_at.strftime("%d-%m-%Y") %></a>
             </div>
             <p>
               <%= @recipe.recipe %>
@@ -182,7 +182,7 @@
             <div class="comment-meta">
               <div class="d-flex">
                 <a href="#" class="post-author"><%= comment.user.username %></a>
-                <a href="#" class="post-date"><%= I18n.l(comment.created_at) %></a>
+                <a href="#" class="post-date"><%= comment.created_at.strftime("%d-%m-%Y") %></a>
                 <% if user_signed_in? %>
                 <% if comment.user_id == current_user.id %>
                 <a href="#" class="post-date" onclick=<%= formCmtShow%>>Reply</a>
@@ -242,7 +242,7 @@
                 <div class="comment-meta">
                   <div class="d-flex">
                     <a href="#" class="post-author"><%= reply.user.username%></a>
-                    <a href="#" class="post-date"><%= reply.created_at.strftime("%d %b, %Y %H:%M")%></a>
+                    <a href="#" class="post-date"><%= reply.created_at.strftime("%d-%m-%Y")%></a>
                     <% if user_signed_in? %>
                     <% if reply.user_id == current_user.id %>
                     <a href="#" class="post-date" onclick=<%= formShow%>>Reply</a>
@@ -302,12 +302,16 @@
       var data = $('.new_comment textarea').val()
       var html = '<li class="single_comment_area">'+
                   '<div class="comment-content d-flex">'+
+                    '<% if user_signed_in? %>'+
                     '<div class="comment-author">'+
                       '<img src="<%= current_user.avatar %>" alt="author">'+
                     '</div>'+
+                    '<% end %>'+
                   '<div class="comment-meta">'+
                   '<div class="d-flex">'+
+                    '<% if user_signed_in? %>'+
                       '<a href="#" class="post-author"><%= current_user.username %></a>'+
+                      '<% end %>'+
                       '<a href="#" class="post-date">Now</a>'+ 
                       '<a href="#" class="post-date">Reply</a>'+
                       '<a href="#" class="post-date">Edit</a>'+
