--- a/app/app/views/recipes/show.html.erb
+++ b/app/app/views/recipes/show.html.erb
@@ -292,6 +292,7 @@
           <% end %>
         </li>
         <% end %>
+        <%= csrf_meta_tag %>
       </ol>
     </div>
 
@@ -301,11 +302,11 @@
     $('.new_comment').bind('ajax:success', function(e) {
       var id = e.detail[0]
       var user_id = $('#reply_user_id').val()
-      
+      var AUTH_TOKEN = $('meta[name=csrf-token]').attr('content');
       var data = $('.new_comment textarea').val()
       var edit= '<div id="comment'+id+'" style="display:none;" class="form-group">'+
                 '<form class="new_comment" id="new_comment" action="/comments/2" accept-charset="UTF-8" method="post">'+
-                '<input type="hidden" name="_method" value="put"><input type="hidden" name="authenticity_token" value="nTFS9Uy1ZlRVTGpOFPHHaGNk7Q/qfhmu53dxKA6fIKIevxZXWCIpWgEUpDhR+Eb0640tdBIXjRw9s/aNGQn9Yw==">'+
+                '<input type="hidden" name="_method" value="put"><input type="hidden" name="authenticity_token" value="'+AUTH_TOKEN+'">'+
                 '<input value="'+id+'" type="hidden" name="comment[id]" id="comment_id">'+
                 '<input type="text" name="comment[content]" class="form-control" value="'+data+'">'+
                 '<div class="row">'+
@@ -319,7 +320,7 @@
                 '</form></div>'
       var reply = '<div id="replyCmtForm'+id+'" style="display:none;" class="form-group">'+
                 '<form class="new_reply" id="new_reply" action="/comments/reply" accept-charset="UTF-8" method="post">'+
-                '<input type="hidden" name="authenticity_token" value="Phy4pkg/TWfgH/yOudsbfaxckoXB3VK0n7mfOhA8bLO9kvwEXKgCabRHMvj80prhJLVS/jm0xgZFfRifB6qxcg==">'+
+                '<input type="hidden" name="authenticity_token" value="'+AUTH_TOKEN+'">'+
                 '<input value="'+id+'" type="hidden" name="reply[comment_id]" id="reply_comment_id">'+
                 '<input value="'+user_id+'" type="hidden" name="reply[user_id]" id="reply_user_id">'+
                 '<div class="col-12">'+
